@@ -1,3 +1,10 @@
+Sun, 17 Feb 2008 13:50:09 +0100 <thp@perli.net>
+Fix calculation of average percentage done
+
+	* src/gpodder/services.py: Fix calculation of average percentage done
+	for downloads, thanks to Jérôme Chabod <jerome.chabod@ifrance.com> for
+	the patch
+
 Sun, 17 Feb 2008 13:33:38 +0100 <thp@perli.net>
 Updated translations for 0.11.0
 
